# cinderforge_e

./: .gitattributes  .gitignore  CFE_Raincatcher_Cheatsheet.md  DOCS_CFE_Rundown.md  LICENSE  NOTICE  PRODUCTION_INFRASTRUCTURE.md  README.md  README_cinderforge_raincatcher.md  SETUP_GUIDE.md  Tail-LatestHeartbeat.ps1  bootstrap.ps1  cfe_config.yaml  config.template.yaml  gitattributes  pyproject.toml  pyproject.toml.bak  rc_latest.ps1  requirements.lock.txt  requirements.txt  sample_tokens.txt  setup.ps1  test_integration.py
.githooks/: pre-commit  pre-commit.ps1
.github/: CONTRIBUTING.md  SECURITY.md
cinderforge_e/bench/: adult_bench.py  parity_bench.py
cinderforge_e/dsl/: spec.py
cinderforge_e/dynamics/: __init__.py  aggregator.py  autoreg.py  ddp_reduce.py  penalty.py
cinderforge_e/launch/: deepspeed_helpers.py  deepspeed_launcher.py  ray_launcher.py
cinderforge_e/materialize/: torchnet.py
cinderforge_e/metrics/: __init__.py  bus.py  exporters.py  otel_exporter.py  prom_exporter.py
cinderforge_e/nas/: metrics.py
cinderforge_e/raincatcher/: ingest.py  metrics.py  run.py
cinderforge_e/search/: cli.py
cinderforge_e/trainer/: step.py  train_seq.py
cinderforge_e/units/: blocks.py  rope_variants.py
cinderforge_e/validate/: cli.py  conformance.py
cluster/base/: configmap-cfe-config.yaml  kustomization.yaml  namespace.yaml  pvc.yaml
cluster/deepspeed/: ds_config_zero3.json
cluster/ray/: cluster_ray.yaml
configs/: CONFIG_template.yaml
ds_config/: zero3.json
patches/: 0001-irope-prep.patch
tests/: test_basic.py
(+16 files in other folders)
